# raesan

./: .dockerignore  .env  .gitignore  .tool-versions  Cargo.toml  README.md  bun.lockb  compose.yaml  dev.dockerfile  diesel.toml  dockerfile  entrypoint.sh  flake.nix  package.json  tailwind.config.js  taskfile.yaml
.github/workflows/: ci.yml  docker-build.yml
database/: raesan_base.db
dataset/: _base.json  _chapters.json  _chapters.md  _classes.json  _questions.json  _subjects.json
dataset/chapters/: 11_biology.json  11_chemistry.json  11_computer_science.json  11_english.json  11_maths.json  11_physical_education.json  11_physics.json  12_biology.json  12_chemistry.json  12_computer_science.json  12_english.json  12_maths.json  12_physics.json  (+1 more)
raesan/: .env  Cargo.toml  README.md  bun.lockb  package.json  tailwind.config.js
raesan-common/: Cargo.toml  README.md
raesan-dbm/: .env  Cargo.toml  README.md  bun.lockb  package.json  tailwind.config.js
raesan-dbm/database/: raesan_base.db
raesan-dbm/src/: main.rs  utils.rs
raesan-dbm/src/core/: app.rs  mod.rs  models.rs
raesan-dbm/src/handlers/: api.rs  mod.rs  templates.rs  test_route.rs
raesan-dbm/src/handlers/api/: chapter.rs  class.rs  mod.rs  question.rs  subject.rs
raesan-dbm/src/templates/: routes.rs
raesan-dbm/src/utils/: export_dataset.rs  generate_database_records.rs  mod.rs  sync_dataset.rs
raesan-dbm/static/: chapter_route.js  class_route.js  create_test.js  question_route.js  style.css  subject_route.js
raesan-dbm/templates/: base.html
raesan-dbm/templates/components/: create_from_json_modal.html  create_modal.html  hovering_buttons.html
raesan-dbm/templates/routes/: chapter.html  class.html  question.html  subject.html
raesan/src/: main.rs
raesan/src/core/: app.rs  database.rs  dataset.rs  mod.rs  models.rs
raesan/src/handlers/: api.rs  mod.rs  test_route.rs
raesan/src/handlers/api/: mod.rs
raesan/src/templates/: routes.rs
raesan/static/: create_test.js  style.css  test_route.js
raesan/templates/: base.html
raesan/templates/routes/: create-test.html  index.html  test.html
src/: main.rs  utils.rs
static/: create_test.js  style.css
templates/: base.html
(+39 files in other folders)
