[package]
name = "raesan"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.5"
# axum-extra = { version = "0.9.4", features = ["typed-header"] }
askama = {version = "0.12.1", features = ["serde-json"]}
askama_axum = "0.4.0"
rust-embed="8.5.0"
mime_guess = "2.0.5"
serde = { version = "1.0.170", features = ["derive"] }
serde_json = "1.0.84"
katex = "0.4.6"
